# debate-flow-analyzer

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: debate-flow-analyzer.tex
examples/: demo.py  sample_transcript.txt
src/: __init__.py  cli.py
src/core/: __init__.py  dropped.py  extractor.py  flow_sheet.py  formats.py  impact.py  llm_client.py  parser.py  win_prob.py
src/viz/: __init__.py  app.py
tests/: test_dropped.py  test_extractor.py  test_flow_sheet.py  test_formats.py  test_parser.py
